# CS354R-Assignment-2

./: .gitignore  Ball Game User Manual.docx  Final Project Report.docx  README.md
appdirectory/: Ball.cpp  Ball.h  BallApplication.cpp  BallApplication.h  BallContactCallback.h  BallFloorCallback.cpp  BallFloorCallback.h  BallGame.cpp  BallGame.h  BallPaddleCallback.cpp  BallPaddleCallback.h  BallScoreCallback.cpp  BallScoreCallback.h  BaseApplication.cpp  GameObject.cpp  GameObject.h  Makefile  Makefile.am  Makefile.in  OgreApp  OgreMotionState.cpp  OgreMotionState.h  Paddle.cpp  Paddle.h  Physics.cpp  Physics.h  Score.cpp  Score.h  Wall.cpp  Wall.h  clean  config.status  configure  configure.ac  libtool  resources.cfg
appdirectory/.deps/: OgreApp-Ball.Po  OgreApp-BallApplication.Po  OgreApp-BallGame.Po  OgreApp-GameObject.Po  OgreApp-OgreMotionState.Po  OgreApp-Physics.Po  OgreApp-Score.Po  OgreApp-TutorialApplication.Po  OgreApp-Wall.Po
appdirectory/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
appdirectory/materials/: red.material
